# uicdev

./: .gitignore  README.md  pyproject.toml
apps/accounts/: auth.py  auth_classes.py  models.py  signals.py  tasks.py  tests.py  urls.py  utils.py  views.py
apps/accounts/apis/: __init__.py  serializers.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_user_phone.py  0004_wallet.py  0005_alter_wallet_user.py  0006_user_stars_balance.py
apps/accounts/serializers/: __init__.py  auth.py  author.py  education.py  profile.py  user.py
apps/accounts/views/: __init__.py  auth.py  author_crud.py  education_crud.py  profile_editing.py  user.py
apps/common/: admin.py  models.py  tasks.py  urls.py
apps/common/apis/: __init__.py  serializers.py  views.py
apps/common/migrations/: 0001_initial.py  0002_remove_media_file_url_media_file.py  0003_region_country.py
apps/common/serializers/: __init__.py  country.py  country_region.py  media.py  region.py
apps/common/views/: __init__.py  country_crud.py  country_region.py  file_upload.py  media_crud.py  region_crud.py
apps/courses/: admin.py  apps.py  choices.py  models.py  tests.py  translation.py  urls.py
apps/interactions/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/notifications/: urls.py
apps/payments/: admin.py  choices.py  models.py  serializers.py  tests.py  urls.py  views.py
config/: jazzmin_conf.py  settings.py  urls.py
docs/: FLOW.md  TESTING.md  uicdev.drawio
fakepay/: README.md  fakepay.db  main.py  pyproject.toml
(+41 files in other folders)
